@startuml
hide methods

package "Aggregate Client " {

    ' Agregado Client (Aggregate Root)
    class Client <<AggregateRoot>> {
        ClientID: Id
        ClientName: Name
        ClientVAT: VAT
        ClientAddress: Address
        Representatives: List<Representative>
    }

    ' Value Objects do Client
    class Id <<(V, #007fff) ValueObject>> {
        value: String
    }

    class Name <<(V, #007fff) ValueObject>> {
        value: String
    }

    class VAT <<(V, #007fff) ValueObject>> {
        value: String
    }

    class Address <<(V, #007fff) ValueObject>> {
        value: String
    }

    ' Representante (Gestor do sistema é um tipo de User, aqui é o representante do cliente)
    class Representative <<Entity>> {
        RepresentativeId: Id
        RepresentativeName: Name
    }

    Client --> Id
    Client --> Name
    Client --> VAT
    Client --> Representative
    Representative --> Id
    Representative --> Name
    Client --> Address
}
@enduml
